--- a/src/Attendance.html
+++ b/src/Attendance.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script defer src="js/login.js"></script>
+    <script defer src="js/events.js"></script>
     <title>Test</title>
 </head>
 
@@ -77,6 +77,42 @@
                 </tbody>
 
             </table>
+        </div>
+
+    </main>
+
+    <main>
+        <div class="containerForm">
+            <form id="form" action="/">
+                <h2><strong>Create Event</strong></h2>
+                <div class="input-control">
+                    <label for="eventName"><strong>Event Name</strong></label>
+                    <input id="eventName" name="eventName" type="text">
+                    <div class="error"></div>
+                </div>
+                <div class="input-control">
+                    <label for="eventLocation"><strong>Event Location</strong></label>
+                    <input id="eventLocation" name="eventLocation" type="text">
+                    <div class="error"></div>
+                </div>
+                <div class="input-control">
+                    <label for="eventDate"><strong>Event Date</strong></label>
+                    <input id="eventDate" name="eventDate" type="date">
+                    <div class="error"></div>
+                </div>
+                <div class="input-control">
+                    <label for="eventDescription"><strong>Description</strong></label>
+                    <textarea rows="5" placeholder="Enter description" id="eventDescription" name="eventDescription"></textarea>
+                    <div class="error"></div>
+                </div>
+                <div class="input-control">
+                    <label for="imageFile"><strong>Image file (Limit 10MB)</strong> </label>
+                    <input id="imageFile" name="imageFile" type="file">
+                    <div class="error"></div>
+                </div>
+                <button type="submit"><strong>Sign Up</strong></button>
+
+            </form>
         </div>
 
     </main>
